# nitter-timeline

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
nitter_timeline/: __main__.py  main.py
nitter_timeline/api/: routes.py
nitter_timeline/core/: config.py  logging.py  security.py
nitter_timeline/models/: feed.py
nitter_timeline/services/: aggregator.py  fetcher.py  sanitize.py
nitter_timeline/web/: pages.py
nitter_timeline/web/static/: app.js  styles.css
nitter_timeline/web/templates/: index.html
scripts/: dev.sh
tests/: test_aggregator.py
